logs/pg-typical.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pg_foundation-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pg_typical-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/postgresql'...
Listing './lib/python3.5/site-packages/postgresql/encodings'...
Compiling './lib/python3.5/site-packages/postgresql/encodings/pbytea.py'...
***   File "./lib/python3.5/site-packages/postgresql/encodings/pbytea.py", line 30
    raise ValueError, "incomplete backslash sequence"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/postgresql/protocol'...
Listing './lib/python3.5/site-packages/postgresql/protocol/typical'...
Compiling './lib/python3.5/site-packages/postgresql/protocol/typical/pstruct.py'...
***   File "./lib/python3.5/site-packages/postgresql/protocol/typical/pstruct.py", line 66
    def mktime((seconds, ms)):
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/strings.py'...
***   File "./lib/python3.5/site-packages/postgresql/strings.py", line 54
    quote_re = re.compile(ur"""(?xu)
	E'(?:''|\\.|[^'])*(?:'|$)          (?# Backslash escapes E'str')
|	'(?:''|\\.|[^'])*(?:'|$)           (?# Regular literals 'str')
|	"(?:""|[^"])*(?:"|$)               (?# Identifiers "str")
|	(\$(?:[^0-9$]\w*)?\$).*?(?:\1|$)   (?# Dollar quotes $$str$$)
""")
                                    
	                                                                
 	                                                              
 	                                                         
 	                                                             
  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/postgresql/test'...
Listing './lib/python3.5/site-packages/postgresql/utility'...
Listing './lib/python3.5/site-packages/postgresql/utility/client'...
Compiling './lib/python3.5/site-packages/postgresql/utility/client/iri.py'...
***   File "./lib/python3.5/site-packages/postgresql/utility/client/iri.py", line 238
    raise ValueError, 'unclosed command reference started at %d' %(
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/utility/client/option.py'...
***   File "./lib/python3.5/site-packages/postgresql/utility/client/option.py", line 177
    raise OptionValueError, \
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/postgresql/utility/client/pgpass.py'...
***   File "./lib/python3.5/site-packages/postgresql/utility/client/pgpass.py", line 26
    def lookup_password(words, (user, host, port, database)):
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
